--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     .hero {
       height: 90vh;
-      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('hero-motor.png') center/cover no-repeat;
+      background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('images/hero-motor.png') center/cover no-repeat;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -165,25 +165,25 @@
     <h3>Unsere Produkte</h3>
     <div class="product-grid">
       <div class="product-card">
-        <img src="antriebe.png" alt="Antriebe">
+        <img src="images/antriebe.png" alt="Antriebe">
         <h4>Antriebe</h4>
         <p>Leistungsstarke Außenläufer-Motoren für höchste Effizienz und Qualität im Modellflug.</p>
         <a href="#">Mehr erfahren</a>
       </div>
       <div class="product-card">
-        <img src="fahrwerke.png" alt="Fahrwerke">
+        <img src="images/fahrwerke.png" alt="Fahrwerke">
         <h4>Fahrwerke</h4>
         <p>Präzise gefertigte Einziehfahrwerke für elegante Starts und sichere Landungen.</p>
         <a href="#">Mehr erfahren</a>
       </div>
       <div class="product-card">
-        <img src="fes-ex-system.png" alt="FES-Ex System">
+        <img src="images/fes-ex-system.png" alt="FES-Ex System">
         <h4>FES-Ex System</h4>
         <p>Das FES-Ex System – innovative Front-Elektro-Startlösungen für Segelflugmodelle.</p>
         <a href="#">Mehr erfahren</a>
       </div>
       <div class="product-card">
-        <img src="zubehoer.png" alt="Zubehör">
+        <img src="images/zubehoer.png" alt="Zubehör">
         <h4>Zubehör</h4>
         <p>Passgenaues Zubehör – von Luftschrauben bis Spezialkabeln, alles aus einer Hand.</p>
         <a href="#">Mehr erfahren</a>
