git commit -m "CI: Farben und Logo gemäß Handbuch angepasst"

--- a/index.html
+++ b/index.html
@@ -18,12 +18,22 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero slideshow">
+    <div class="slides">
+      <img src="images/slide1.jpg" alt="" class="slide">
+      <img src="images/slide2.jpg" alt="" class="slide">
+      <img src="images/slide3.jpg" alt="" class="slide">
+    </div>
     <div class="hero-content">
       <h1>Effizienz. Präzision. Leistung.</h1>
       <p>Wir entwickeln und fertigen High-End Antriebssysteme für den Modellflug auf höchstem Niveau.</p>
     </div>
+    <div class="slideshow-nav">
+      <button class="prev">&larr;</button>
+      <button class="next">&rarr;</button>
+    </div>
   </section>
+  
 
   <section id="produkte">
     <h2>Unsere Produkte</h2>
