git commit -m "Feat: Slideshow für Hero-Bereich eingebaut"

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
   <section class="hero slideshow">
     <div class="slides">
-      <img src="images/slide1.jpg" alt="" class="slide">
-      <img src="images/slide2.jpg" alt="" class="slide">
-      <img src="images/slide3.jpg" alt="" class="slide">
+      <img src="images/slide1.png" alt="" class="slide">
+      <img src="images/slide2.png" alt="" class="slide">
+      <img src="images/slide3.png" alt="" class="slide">
     </div>
     <div class="hero-content">
       <h1>Effizienz. Präzision. Leistung.</h1>
