--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 
   <section class="hero slideshow">
     <div class="slides">
-      <img src="images/slide1.png" alt="" class="slide">
-      <img src="images/slide2.png" alt="" class="slide">
-      <img src="images/slide3.png" alt="" class="slide">
+      <img src="images/slide1.png" class="slide active" alt="">
+      <img src="images/slide2.png" class="slide" alt="">
+      <img src="images/slide3.png" class="slide" alt="">
+
     </div>
     <div class="hero-content">
       <h1>Effizienz. Präzision. Leistung.</h1>
@@ -91,14 +92,34 @@
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      const track = document.querySelector('.carousel-track');
-      document.querySelector('.carousel-btn.next').addEventListener('click', () => {
-        track.scrollBy({ left: track.offsetWidth * 0.45 + 24, behavior: 'smooth' });
-      });
-      document.querySelector('.carousel-btn.prev').addEventListener('click', () => {
-        track.scrollBy({ left: - (track.offsetWidth * 0.45 + 24), behavior: 'smooth' });
-      });
+  const slides = document.querySelectorAll('.hero.slideshow .slide');
+  const next = document.querySelector('.slideshow-nav .next');
+  const prev = document.querySelector('.slideshow-nav .prev');
+  let current = 0;
+
+  function showSlide(index) {
+    slides.forEach((slide, i) => {
+      slide.classList.toggle('active', i === index);
     });
+  }
+
+  function nextSlide() {
+    current = (current + 1) % slides.length;
+    showSlide(current);
+  }
+
+  function prevSlide() {
+    current = (current - 1 + slides.length) % slides.length;
+    showSlide(current);
+  }
+
+  next.addEventListener('click', nextSlide);
+  prev.addEventListener('click', prevSlide);
+
+  showSlide(current);
+  setInterval(nextSlide, 5000); // change every 5s
+});
+
   </script>
   
 
