git commit -m "Refactor: Slideshow in separate Datei ausgelagert"

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
     &copy; 2025 Torcman GmbH – Alle Rechte vorbehalten.
   </footer>
 
+  <script src="slideshow.js"></script>
+
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const slides = document.querySelectorAll('.hero.slideshow .slide');
