"Feat: Überlappendes, automatisches & pausierbares Produkt-Carousel"

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
         <p>Passgenaues Zubehör – von Luftschrauben bis Spezialkabeln.</p>
         <a href="#" class="btn">Mehr erfahren</a>
       </div>
+      <div class="product-card">
+        <img src="images/entwicklung.png" alt="entwicklung">
+        <h3>Entwicklung</h3>
+        <p>Entwicklungsdienstleistung – für beste Ergebnisse.</p>
+        <a href="#" class="btn">Mehr erfahren</a>
+      </div>
     </div>
     <button class="carousel-btn next" aria-label="Weiter">›</button>
   </section>
