--- a/index.html
+++ b/index.html
@@ -67,6 +67,37 @@
         <a href="#" class="btn">Mehr erfahren</a>
       </div>
     </div>
+    <div class="product-card">
+      <img src="images/antriebe.png" alt="Antriebe">
+      <h3>Antriebe</h3>
+      <p>Leistungsstarke Außenläufer-Motoren für höchste Effizienz.</p>
+      <a href="#" class="btn">Mehr erfahren</a>
+    </div>
+    <div class="product-card">
+      <img src="images/fahrwerke.png" alt="Fahrwerke">
+      <h3>Fahrwerke</h3>
+      <p>Präzise gefertigte Einziehfahrwerke für elegante Starts.</p>
+      <a href="#" class="btn">Mehr erfahren</a>
+    </div>
+    <div class="product-card">
+      <img src="images/fes-ex-system.png" alt="FES-Ex System">
+      <h3>FES-Ex System</h3>
+      <p>Innovative Front-Elektro-Startlösungen für Segelflugmodelle.</p>
+      <a href="#" class="btn">Mehr erfahren</a>
+    </div>
+    <div class="product-card">
+      <img src="images/zubehoer.png" alt="Zubehör">
+      <h3>Zubehör</h3>
+      <p>Passgenaues Zubehör – von Luftschrauben bis Spezialkabeln.</p>
+      <a href="#" class="btn">Mehr erfahren</a>
+    </div>
+    <div class="product-card">
+      <img src="images/entwicklung.png" alt="entwicklung">
+      <h3>Entwicklung</h3>
+      <p>Entwicklungsdienstleistung – für beste Ergebnisse.</p>
+      <a href="#" class="btn">Mehr erfahren</a>
+    </div>
+  </div>
     <button class="carousel-btn next" aria-label="Weiter">›</button>
   </section>
 
