--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
     <nav>
-      <a href="#produkte">Produkte</a>
+      <a href="produkte.html">Produkte</a>
       <a href="#ueber-uns">Über uns</a>
       <a href="#kontakt">Kontakt</a>
     </nav>
