Make logo link to home

--- a/produkte.html
+++ b/produkte.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
+    <a href="index.html">
+      <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
+    </a>
     <nav>
       <a href="index.html#produkte">Produkte</a>
       <a href="index.html#ueber-uns">Über uns</a>
