--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
   <header>
-    <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
+    <a href="index.html">
+      <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
+    </a>
     <nav>
       <a href="produkte.html">Produkte</a>
       <a href="#ueber-uns">Über uns</a>
