Add individual product pages and links

--- a/produkte.html
+++ b/produkte.html
@@ -25,31 +25,31 @@
         <img src="images/antriebe.png" alt="Antriebe">
         <h3>Antriebe</h3>
         <p>Leistungsstarke Außenläufer-Motoren für höchste Effizienz.</p>
-        <a href="#" class="btn">Mehr erfahren</a>
+        <a href="antriebe.html" class="btn">Mehr erfahren</a>
       </div>
       <div class="product-card">
         <img src="images/fahrwerke.png" alt="Fahrwerke">
         <h3>Fahrwerke</h3>
         <p>Präzise gefertigte Einziehfahrwerke für elegante Starts.</p>
-        <a href="#" class="btn">Mehr erfahren</a>
+        <a href="fahrwerke.html" class="btn">Mehr erfahren</a>
       </div>
       <div class="product-card">
         <img src="images/fes-ex-system.png" alt="FES-Ex System">
         <h3>FES-Ex System</h3>
         <p>Innovative Front-Elektro-Startlösungen für Segelflugmodelle.</p>
-        <a href="#" class="btn">Mehr erfahren</a>
+        <a href="fes-ex-system.html" class="btn">Mehr erfahren</a>
       </div>
       <div class="product-card">
         <img src="images/zubehoer.png" alt="Zubehör">
         <h3>Zubehör</h3>
         <p>Passgenaues Zubehör – von Luftschrauben bis Spezialkabeln.</p>
-        <a href="#" class="btn">Mehr erfahren</a>
+        <a href="zubehoer.html" class="btn">Mehr erfahren</a>
       </div>
       <div class="product-card">
         <img src="images/entwicklung.png" alt="Entwicklung">
         <h3>Entwicklung</h3>
         <p>Maßgeschneiderte Entwicklungsdienstleistungen für Antriebssysteme.</p>
-        <a href="#" class="btn">Mehr erfahren</a>
+        <a href="entwicklung.html" class="btn">Mehr erfahren</a>
       </div>
     </section>
   </main>
