--- a/produkte.html
+++ b/produkte.html
@@ -12,7 +12,7 @@
       <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
     </a>
     <nav>
-      <a href="index.html#produkte">Produkte</a>
+      <a href="produkte.html">Produkte</a>
       <a href="index.html#ueber-uns">Über uns</a>
       <a href="index.html#kontakt">Kontakt</a>
     </nav>
