Add detailed information to Fahrwerke page

--- a/fahrwerke.html
+++ b/fahrwerke.html
@@ -22,6 +22,25 @@
     <section class="product-detail">
       <img src="images/fahrwerke.png" alt="Fahrwerke">
       <p>Präzise gefertigte Einziehfahrwerke für elegante Starts und Landungen.</p>
+        <p>Sicher landen, sauber starten – Elektrische Fahrwerke mit System</p>
+        <p>Das Fahrwerk ist oft eines der am meisten unterschätzten Bauteile im Modellflug. Dabei entscheidet es über sauberes Rollen, sichere Starts und weiche Landungen – und beeinflusst nicht zuletzt die Optik und das Gewicht eines jeden Flugmodells. Bei Torcman entwickeln und fertigen wir elektrische Einziehfahrwerke, die speziell auf große Segelflugmodelle und anspruchsvolle Scale-Modelle abgestimmt sind.</p>
+        <p>Unsere Fahrwerke zeichnen sich durch eine robuste Mechanik, leistungsstarke Spindelantriebe und präzise angesteuerte Endlagenerkennung aus. Dank wartungsarmer Technik und intelligenter Elektronik sind sie auch für raue Pisten, Hangflug oder häufige Flugtage bestens geeignet. Optional bieten wir Systeme mit integrierter Radbremse, Stoßdämpfern oder Sonderlängen für Scale-Bauten.</p>
+        <h2>Technische Highlights</h2>
+        <ul>
+          <li>CNC-gefräste Aluminium-Komponenten für höchste Festigkeit bei geringem Gewicht</li>
+          <li>Spindelantrieb mit selbsthemmender Mechanik – kein Nachfedern bei Landung</li>
+          <li>Intelligente Endlagenabschaltung (optional mit Stromüberwachung)</li>
+          <li>Wartungsarme Bauweise und einfache Demontage im Servicefall</li>
+          <li>Skalierbar – von Standardlösungen bis zu maßgeschneiderten Sonderanfertigungen</li>
+        </ul>
+        <h2>Ideal für</h2>
+        <ul>
+          <li>Großsegler und Doppelsitzer</li>
+          <li>Scale-Modelle mit realistischem Fahrwerkslayout</li>
+          <li>Eigenstarter-Konzepte mit FES oder Schleppkupplung</li>
+          <li>Industrie-Drohnen oder Robotik-Projekte mit Fahrfunktion</li>
+        </ul>
+        <p>Ein Fahrwerk ist nicht einfach ein Bauteil – es ist dein Kontakt zur Welt. Wir sorgen dafür, dass dieser Kontakt sicher, stabil und elegant erfolgt.</p>
     </section>
   </main>
   <footer>
