--- a/fes-ex-system.html
+++ b/fes-ex-system.html
@@ -22,6 +22,24 @@
     <section class="product-detail">
       <img src="images/fes-ex-system.png" alt="FES-Ex System">
       <p>Innovative Front-Elektro-Startlösungen für Segelflugmodelle.</p>
+      <p><strong>Innovation trifft Eleganz – Das klappbare Einziehtriebwerk für Großsegler</strong></p>
+      <p>Mit dem FES-Ex System revolutioniert Torcman den elektrischen Eigenstart: Statt klassischer Faltpropeller, die im Luftstrom klappen, fährt der Propeller samt Antrieb kompakt in den Rumpf ein – und verschwindet nahezu vollständig im aerodynamischen Profil. Die Vorteile liegen auf der Hand: maximale Leistung im Steigflug, minimaler Luftwiderstand im Gleitflug und eine Integration, die sich optisch wie technisch perfekt ins Modell einfügt.</p>
+      <p>Herzstück ist ein speziell entwickelter Mechanismus, der den Propeller sauber einfaltet und samt Antriebseinheit ins Rumpfinnere zieht. Die Steuerung erfolgt über einen eigenen Antriebskanal oder vollständig integriert in unsere Torcman-Reglerelektronik. Sicherheitsfunktionen, Positionsüberwachung und sanfte Bewegungsführung garantieren höchste Betriebssicherheit – auch bei plötzlichen Manöverwechseln.</p>
+      <h2>Typische Einsatzgebiete</h2>
+      <ul>
+        <li>Großsegler ab 4 Meter Spannweite</li>
+        <li>Hochleistungs-Scale-Modelle mit Scale-Nase</li>
+        <li>FAI-Wettbewerbsmodelle, bei denen jeder Meter zählt</li>
+        <li>Ambitionierte Piloten mit Fokus auf Optik und Aerodynamik</li>
+      </ul>
+      <h2>Technik im Detail</h2>
+      <ul>
+        <li>Einziehmechanik mit spielfreier Führung und sanftem Ablauf</li>
+        <li>Kompatibel mit Torcman-Außenläufer und Standardpropellern</li>
+        <li>Elektronische oder mechanische Endlagenkontrolle</li>
+        <li>Optional mit Notentriegelung für Service oder Crash</li>
+      </ul>
+      <p>Ein Triebwerk, das du nicht mehr siehst – aber sofort spürst, wenn es gebraucht wird.</p>
     </section>
   </main>
   <footer>
