Add detailed accessories section

--- a/zubehoer.html
+++ b/zubehoer.html
@@ -23,6 +23,30 @@
       <img src="images/zubehoer.png" alt="Zubehör">
       <p>Passgenaues Zubehör – von Luftschrauben bis Spezialkabeln.</p>
     </section>
+    <section>
+      <h2>Perfekt abgestimmt – Zubehör, das mehr ist als Beiwerk</h2>
+      <p>Ein gutes System besteht aus mehr als der Summe seiner Teile – und genau deshalb bieten wir ein breites Spektrum an hochwertigem Zubehör, das perfekt mit unseren Antrieben, Fahrwerken und Sonderlösungen harmoniert. Ob Regler, Spinner, Luftschrauben, Adapter, CNC-Halter oder Befestigungselemente – bei Torcman bekommst du alles aus einer Hand, aufeinander abgestimmt, getestet und bereit für dein Modell.</p>
+      <p>Unsere Komponenten sind nicht nur kompatibel, sondern konzipiert, um gemeinsam das Beste aus deinem Setup herauszuholen. So vermeidest du unnötige Reibungsverluste, passt Propeller und Drehzahlen optimal an und kannst dein System genau so konfigurieren, wie es deine Flugmission erfordert.</p>
+
+      <h3>Unser Sortiment umfasst unter anderem:</h3>
+      <ul>
+        <li>Regler mit Sonderprogrammierung und Telemetrie</li>
+        <li>CNC-gefräste Spinner mit integrierter Luftschraubenaufnahme</li>
+        <li>Hochleistungs-Propeller (klapp- oder fest) für verschiedenste Anforderungen</li>
+        <li>Adapterlösungen für Sonderrümpfe oder Wechselplatten</li>
+        <li>Kabelsätze, Stromverteiler, EMV-Komponenten</li>
+      </ul>
+
+      <h3>Warum unser Zubehör überzeugt:</h3>
+      <ul>
+        <li>Entwicklung und Test im Haus – für nahtlose Funktion</li>
+        <li>Qualität auf gleichem Niveau wie unsere Antriebe</li>
+        <li>Kein Rätselraten: Du weißt, dass alles passt</li>
+        <li>Beratung inklusive – wir helfen bei der Auswahl</li>
+      </ul>
+
+      <p>Wer bei uns kauft, bekommt mehr als Einzelteile – er bekommt ein System, das funktioniert.</p>
+    </section>
   </main>
   <footer>
     &copy; 2025 Torcman GmbH – Alle Rechte vorbehalten.
