--- a/fahrwerke.html
+++ b/fahrwerke.html
@@ -17,41 +17,14 @@
       <a href="index.html#kontakt">Kontakt</a>
     </nav>
   </header>
-  <main>
-    <h1 class="page-title">Fahrwerke</h1>
-    <section class="product-detail">
-  <img src="images/fahrwerke.png" alt="Fahrwerke">
-  <h2>Sicher landen, sauber starten – Elektrische Fahrwerke mit System</h2>
-  <p>
-    Ein Fahrwerk entscheidet maßgeblich über sauberes Rollen, sichere Starts und weiche Landungen – und beeinflusst wesentlich Optik und Gewicht eines jeden Flugmodells. Bei Torcman setzen wir auf elektrische Einziehfahrwerke, die speziell für Großsegler und anspruchsvolle Scale-Modelle konzipiert sind.
-  </p>
-  <p>
-    Die neue Generation unserer elektrischen Einziehfahrwerke baut auf den bewährten Konstruktionen von <strong>FEMA</strong> auf – einer etablierten Marke im Bereich der Einziehfahrwerke, deren Vermächtnis und Entwicklungsphilosophie wir stolz weiterführen. Der modulare Aufbau erlaubt es, unsere Fahrwerke exakt auf individuelle Anforderungen und Einsatzbedingungen anzupassen. Diese Modularität ermöglicht nicht nur eine hohe Flexibilität, sondern sorgt auch für optimale Leistung in unterschiedlichsten Szenarien.
-  </p>
-  <p>
-    Unsere Fahrwerke zeichnen sich besonders durch ihre beeindruckende Stabilität aus. Sie bewältigen zuverlässig harte Landungen und hohe Belastungen. Leistungsstarke Spindelantriebe und eine präzise angesteuerte Endlagenerkennung sorgen dabei für eine einfache Bedienung und hohe Betriebssicherheit.
-  </p>
-  <p>
-    Darüber hinaus bieten wir optional Systeme mit integrierten Radbremsen, Stoßdämpfern oder individuellen Anpassungen für spezielle Scale-Bauten. Die CNC-gefrästen Aluminium-Komponenten gewährleisten dabei höchste Festigkeit bei minimalem Gewicht.
-  </p>
-  <p>
-    Ein weiterer entscheidender Vorteil ist unser attraktives Preis-Leistungs-Verhältnis. Wir haben uns zum Ziel gesetzt, höchste Qualität zu einem erschwinglichen Preis anzubieten, um allen Modellflugbegeisterten Zugang zu einer zuverlässigen und technisch hochwertigen Lösung zu ermöglichen.
-  </p>
-  <h3>Technische Highlights</h3>
-  <ul>
-    <li>CNC-gefräste Komponenten für maximale Robustheit</li>
-    <li>Selbsthemmende Spindelantriebe für spielfreie Positionierung</li>
-    <li>Intelligente Endlagenabschaltung (optional stromüberwacht)</li>
-    <li>Wartungsarme und servicefreundliche Konstruktion</li>
-    <li>Skalierbar – von Standardlösungen bis hin zu kundenspezifischen Entwicklungen</li>
-  </ul>
-  <p>
-    Ein Fahrwerk ist nicht nur ein Bauteil – es ist dein Kontakt zur Welt. Mit <strong>FEMA by Torcman</strong> entscheidest du dich für Stabilität, Funktionalität und Modularität, die dein Modellflug-Erlebnis nachhaltig verbessern.
-  </p>
-</section>
-  </main>
+  <main id="content"></main>
   <footer>
     &copy; 2025 Torcman GmbH – Alle Rechte vorbehalten.
   </footer>
+
+  <script src="marked.min.js"></script>
+  <script src="loadContent.js"></script>
+  <script src="slideshow.js"></script>
+  <script src="carousel.js"></script>
 </body>
 </html>
