Add Fahrwerk selection helper

--- a/fahrwerke.html
+++ b/fahrwerke.html
@@ -26,5 +26,6 @@
   <script src="loadContent.js"></script>
   <script src="slideshow.js"></script>
   <script src="carousel.js"></script>
+  <script src="fahrwerk-helper.js"></script>
 </body>
 </html>
