Center title and image on Fahrwerke page

--- a/fahrwerke.html
+++ b/fahrwerke.html
@@ -6,7 +6,7 @@
   <title>Torcman – Fahrwerke</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="fahrwerke-page">
   <header>
     <a href="index.html">
       <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
