--- a/fes-ex-system.html
+++ b/fes-ex-system.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Torcman – FES-Ex System</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <a href="index.html">
-      <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo">
-    </a>
-    <nav>
-      <a href="produkte.html">Produkte</a>
-      <a href="index.html#ueber-uns">Über uns</a>
-      <a href="index.html#kontakt">Kontakt</a>
-    </nav>
-  </header>
-  <main id="content"></main>
-  <footer>
-    &copy; 2025 Torcman GmbH – Alle Rechte vorbehalten.
-  </footer>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Torcman – FES-Ex System</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <a href="index.html">
+        <img src="images/TORCMAN_Logo_90.png" alt="Torcman Logo" class="logo" />
+      </a>
+      <nav>
+        <a href="produkte.html">Produkte</a>
+        <a href="index.html#ueber-uns">Über uns</a>
+        <a href="index.html#kontakt">Kontakt</a>
+      </nav>
+    </header>
+    <main id="content"></main>
+    <footer>&copy; 2025 Torcman GmbH – Alle Rechte vorbehalten.</footer>
 
-  <script src="marked.min.js"></script>
-  <script src="loadContent.js"></script>
-  <script src="slideshow.js"></script>
-  <script src="carousel.js"></script>
-</body>
+    <script src="marked.min.js"></script>
+    <script src="loadContent.js"></script>
+    <script src="slideshow.js"></script>
+    <script src="carousel.js"></script>
+  </body>
 </html>
